[package]
name = "obt"
version = "0.1.0"
edition = "2024"

[dependencies]
# WebSocket client
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Terminal UI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1